[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/world/tools/ScrollingTileMap/ScrollingTileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/actors/players/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/world/tools/ScrollingGround/ScrollingGround.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/scripts/rooms/RoomService.gd" type="Script" id=5]
[ext_resource path="res://game/world/scenes/MainGame/MainGame.gd" type="Script" id=6]

[node name="MainGame" type="Node2D"]
script = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="ScrollingGround" parent="Player" instance=ExtResource( 4 )]
z_index = -1000
region_rect = Rect2( 0, 0, 720, 360 )
region_filter_clip = true

[node name="ScrollingTileMap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 0, 1, 0 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HUDUpdateTimer" type="Timer" parent="HUD"]
autostart = true

[node name="FPS" type="Label" parent="HUD"]
margin_left = 4.0
margin_top = 3.0
margin_right = 44.0
margin_bottom = 17.0

[node name="Infos" type="Label" parent="HUD"]
margin_left = 4.0
margin_top = 22.0
margin_right = 44.0
margin_bottom = 36.0

[node name="Scripts" type="Node" parent="."]

[node name="RoomService" type="Node" parent="Scripts"]
script = ExtResource( 5 )

[node name="Portals" type="Node" parent="."]

[node name="Enemies" type="Node" parent="."]

[connection signal="timeout" from="HUD/HUDUpdateTimer" to="." method="_on_HUDUpdateTimer_timeout"]
